tests/ui/coherence/coherence-vec-local-2.stderr
error[E0119]: conflicting implementations of trait `Remote` for type `Vec<Local<_>>`
  --> $DIR/coherence-vec-local-2.rs:9:1
   |
LL | impl<T> Remote for Vec<Local<T>> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `coherence_concrete_lib`:
           - impl<T> Remote for Vec<T>
             where T: Clone;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
